Fix too long calendar names in the sidebar widget (CSS).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.AppointmentCalendar.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.AppointmentCalendar.css
@@ -24,6 +24,15 @@
         margin-bottom: 5px;
     }
 
+    .CalendarSwitch label {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        width: 220px;
+        display: inline-block;
+        vertical-align: middle;
+    }
+
     #CalendarList .CalendarSwitch:last-child {
         margin-bottom: 0;
     }
